determination the version changed

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,14 @@
 ChangeLog
 =========
 
-V 0.1.1
+CURRENT
 -------
+* internal changes
+
+v0.1.1
+------
 * first public release
 
-V 0.1.0
--------
+v0.1.0
+------
 * init version
